--- a/index.html
+++ b/index.html
@@ -29,8 +29,17 @@
 <body>
 	<h1>Happy 60th Birthday Dad!</h1>
 	<img id="cake" src="60th-birthday-15.gif" alt="Cake">
-	<p id="message">Wishing you a wonderful birthday filled with joy, love, and lots of music! Here's a quote from Hannah Arendt that I think you'll appreciate:</p>
-	<blockquote>"The aim of totalitarian education has never been to instill convictions but to destroy the capacity to form any."</blockquote>
-	<p>Let's celebrate with some of your favorite folk songs and guitar tunes!</p>
+	<p id="message">
+    While you may feel like you're getting older, remember that:
+    </p>
+	<blockquote>"the best tunes are played on
+        the oldest fiddles!"</blockquote>
+	<p>We wish you the best on your birthday and send you our love from abroad</p>
+	
+	Love &hearts;, <br/> Edward and Richard
+	<br/><br/> Ps. from Edward,
+	<br/>
+	Richard has been in the hospital since Thursday, so I'm not sure if we'll be able to get back to talk to you.
 </body>
 </html>
+
